Style fix.